Changed the code for extension and Added flask server code.

--- a/Extension/dpbh.html
+++ b/Extension/dpbh.html
@@ -6,7 +6,7 @@
 
 <body>
   <div style="border: 5px; border-color: white;">
-    <h2>Dark Pattern Recognition</h2>
+    <h2>Team Pattern Hunters</h2>
 
     <input id="input" type="text" placeholder="Enter your text" class="input-box">
 
