--- a/extension/dpbh.html
+++ b/extension/dpbh.html
@@ -6,11 +6,12 @@
 
 <body>
   <div style="border: 5px; border-color: white;">
-    <h2>Team Pattern Hunters</h2>
+    <h2>Dark Pattern Recognition</h2>
 
     <input id="input" type="text" placeholder="Enter your text" class="input-box">
 
     <button class="input-button" type="button" id="myButton">Submit</button>
+    <button class="input-button" type="button" id="manageSubscriptionsButton" onclick="redirectToSubscribe()">Manage Subscriptions</button>
 
     <p id="output" class="output-text"></p>
   </div>
